@@ -1,3 +1,4 @@
+* Retry sending email on temporary failure
 * Order not sorted Selection by index definition
 * Add optional column on tree view
 * Use dictionary as domain on Reference field
